added file uploading and handling and access token entity now extends base entity
