# apps/api/src/modules/file/dto/upload-file.dto.ts
@@ -1,0 +1,12 @@
+import { ApiPropertyOptional } from '@nestjs/swagger';
+import { IsOptional, IsString } from 'class-validator';
+
+export class UploadFileDto {
+  @ApiPropertyOptional({
+    description: 'Optional custom path/folder for the file',
+    example: 'avatars',
+  })
+  @IsOptional()
+  @IsString()
+  folder?: string;
+}
